--- a/app/src/main/res/layout/activity_receptor.xml
+++ b/app/src/main/res/layout/activity_receptor.xml
@@ -18,14 +18,17 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:paddingTop="15dp"
+            android:textSize="24sp"
             android:text="Nome:"
-            android:textSize="24sp" />
+             />
 
         <TextView
-            android:id="@+id/textView_1"
+            android:id="@+id/textView_nome2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:paddingTop="15dp"
+            android:textSize="24sp"
              />
 
 
@@ -46,10 +49,12 @@
             android:paddingTop="15dp"/>
 
         <TextView
-            android:id="@+id/textView_2"
+            android:id="@+id/textView_sobrenome2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:paddingTop="15dp"
+            android:textSize="24sp"
              />
 
 
@@ -70,10 +75,12 @@
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView_3"
+            android:id="@+id/textView_idade2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:paddingTop="15dp"
+            android:textSize="24sp"
              />
 
 
